--- a/client/src/components/Slider/Slider.scss
+++ b/client/src/components/Slider/Slider.scss
@@ -1,23 +1,23 @@
-.slider{
+.slider {
   height: calc(100vh - 80px);
   width: 100vw;
   position: relative;
   overflow: hidden;
 
-  .container{
+  .container {
     width: 300vw;
     height: 100%;
     display: flex;
     transition: all 1s ease;
 
-    img{
+    img {
       width: 100vw;
       height: 100%;
       object-fit: cover;
     }
   }
 
-  .icons{
+  .icons {
     width: fit-content;
     display: flex;
     position: absolute;
@@ -26,12 +26,13 @@
     bottom: 100px;
     gap: 10px;
     margin: auto;
+    color: white;
 
-    .icon{
+    .icon {
       width: 50px;
       height: 50px;
-      border: 1px solid #999;
       display: flex;
+      border: 1px solid white;
       align-items: center;
       justify-content: center;
       cursor: pointer;
