--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -13,13 +13,13 @@
       text-align: justify;
       font-size: 14px;
 
-      h1{
+      h1 {
         font-size: 18px;
         font-weight: 500;
         color: #555;
       }
 
-      span{
+      span {
         color: gray;
       }
     }
@@ -34,21 +34,20 @@
       display: flex;
       align-items: center;
 
-      .logo{
-        color: #2879fe;
+      .logo {
+        color: #795548;
         font-weight: bold;
         font-size: 24px;
       }
 
-      .copyright{
+      .copyright {
         margin-left: 20px;
         font-size: 12px;
         color: gray;
       }
     }
     .right {
-
-      img{
+      img {
         height: 50px;
       }
     }
