--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,5 +1,6 @@
 .navbar {
   height: 80px;
+  background-color: #fff;
 
   .wrapper {
     padding: 10px 30px;
@@ -26,30 +27,61 @@
       display: flex;
       align-items: center;
       gap: 25px;
+      position: relative;
+
+      .dropdown {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        background-color: white;
+        width: 100%;
+        display: none;
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px;
+        z-index: 1;
+
+        &.open {
+          display: flex;
+        }
+
+        .item {
+          font-size: 16px;
+          padding: 5px 0;
+        }
+      }
 
       .icons {
         display: flex;
         gap: 15px;
         color: #777;
         cursor: pointer;
+      }
 
-        .cartIcon {
-          position: relative;
+      .searchIcon {
+        cursor: pointer;
+      }
 
-          span {
-            font-size: 12px;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            background-color: #2879fe;
-            color: white;
-            position: absolute;
-            right: -10px;
-            top: -10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-          }
+      .menuIcon {
+        cursor: pointer;
+      }
+
+      .cartIcon {
+        position: relative;
+
+        span {
+          font-size: 12px;
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+          background-color: #795548;
+          color: white;
+          position: absolute;
+          right: -10px;
+          top: -10px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
       }
     }
