--- a/client/src/components/Contact/Contact.scss
+++ b/client/src/components/Contact/Contact.scss
@@ -1,31 +1,34 @@
-.contact{
-  background-color: #2879fe;
+.contact {
+  background-color: #795548;
   color: white;
   padding: 15px;
   display: flex;
   justify-content: center;
 
-  .wrapper{
+  .wrapper {
     width: 50%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
-    input{
+    input {
       padding: 10px;
       border: none;
-      border-radius: 5px 0 0  5px;
+      border-radius: 5px 0 0 5px;
     }
 
-    button{
+    button {
       padding: 10px;
       color: white;
-      background: #333;
+      background: #7193a8;
       border-radius: 0 5px 5px 0;
       border: none;
     }
+    span {
+      margin: 10px;
+    }
 
-    .icons{
+    .icons {
       display: flex;
       gap: 10px;
     }
