--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,32 +1,37 @@
 .navbar {
-  height: 80px;
+  height: 60px;
   background-color: #fff;
 
   .wrapper {
-    padding: 10px 30px;
+    padding: 10px 15px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 15px; 
 
     .item {
       display: flex;
       align-items: center;
-      font-size: 18px;
+      font-size: 14px;
     }
 
     .left {
       display: flex;
       align-items: center;
-      gap: 25px;
+      gap: 15px;
+      flex-grow: 1;
     }
     .center {
-      font-size: 30px;
-      letter-spacing: 2px;
+      font-size: 24px;
+      font-weight: 500;
+      letter-spacing: 1px; 
+      flex-grow: 1;
+      
     }
     .right {
       display: flex;
       align-items: center;
-      gap: 25px;
+      gap: 15px;
       position: relative;
 
       .dropdown {
@@ -45,15 +50,14 @@
           display: flex;
         }
 
-        .item {
-          font-size: 16px;
-          padding: 5px 0;
+        .left-links {
+          display: none;
         }
       }
 
       .icons {
         display: flex;
-        gap: 15px;
+        gap: 10px;
         color: #777;
         cursor: pointer;
       }
@@ -70,20 +74,89 @@
         position: relative;
 
         span {
-          font-size: 12px;
-          width: 20px;
-          height: 20px;
+          font-size: 10px;
+          width: 16px;
+          height: 16px;
           border-radius: 50%;
           background-color: #795548;
           color: white;
           position: absolute;
-          right: -10px;
-          top: -10px;
+          right: -8px;
+          top: -8px;
           display: flex;
           align-items: center;
           justify-content: center;
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .navbar .wrapper .left {
+   display: none;
+  }
+  .navbar .wrapper{
+    gap: 36px;
+
+    .right {
+      .dropdown {
+        width: 20%;
+        right: 65%
+      }
+      .dropdown .link{
+        font-size: 10px;
+        line-height: .8;
+      }
+      .icons { 
+      gap: 4px;
+    }
+  }
+  }
+  .center {
+    flex: 1;
+
+    .link{
+      font-size: 16px;
+    }
+  }
+  .right {
+    margin-top: 8px;
+    flex: 2;
+  }
+  
+    
+  .icons svg{
+    font-size: 16px;
+  
+  }
+  
+  .icons .extra-icons{
+    display: none;
+  }
+  .icons .item .extra-icons{
+    display: none;
+  }
+}
+
+@media screen and (max-width: 375px) {
+
+  .dropdown {
+    .left-links {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      .item {
+        font-size: 14px;
+        padding: 5px 0;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .center .link {
+    font-size: 12px;
   }
 }
