--- a/client/src/components/FeaturedProducts/FeaturedProducts.scss
+++ b/client/src/components/FeaturedProducts/FeaturedProducts.scss
@@ -24,3 +24,25 @@
     gap: 50px;
   }
 }
+
+
+@media screen and (max-width: 576px) {
+  .featuredProducts{
+   margin : 60px 10px;
+  }
+  .top {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    h1{
+      margin-bottom: 20px;
+      font-size: 24px;
+      font-weight: 600;
+    }
+    p {
+      margin: 0px 40px;
+      font-size: 14px;
+      
+    }
+  }
+}
